Add Window Icon thru qresource (#6)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,5 @@
 include vspleeter/vspleeter.png
 include vspleeter/vspleeter_mainWindow.ui
+include vspleeter/vspleeter_icons.png
+include vspleeter/vspleeter_qrc.py
+include vspleeter/resource.qrc
